--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,25 @@ body {
     line-height: 24px;
     overscroll-behavior: none;
 }
+
+.uiBase {
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 10px;
+    font-size: 24px;
+}
+.uiGameOver {
+    position: absolute;
+    font-size: 128px;
+    top: 50%;
+    left: 50%;
+    margin: -70px 0 0 -280px;
+}
+
+.gameOverHeader {
+    pointer-events: none;
+    border: 10px solid black;
+    background-color: black;
+    padding: 0 20px 0 20px;
+    min-width: 600px;
+}
