--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,6 @@ body {
 
 .uiBase {
     position: absolute;
-    margin-left: 10px;
-    margin-top: 10px;
     font-size: 24px;
 }
 .uiGameOver {
@@ -19,7 +17,8 @@ body {
     font-size: 128px;
     top: 50%;
     left: 50%;
-    margin: -70px 0 0 -280px;
+    margin: -70px 0 0 -340px;
+    display: none;
 }
 
 .gameOverHeader {
@@ -28,4 +27,14 @@ body {
     background-color: black;
     padding: 0 20px 0 20px;
     min-width: 600px;
+}
+.restartButton {
+    vertical-align: middle;
+}
+
+#uiComboScore {
+    position: absolute;
+    font-size: 128px;
+    right: 36%;
+    top: 100px;
 }
