--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ body {
     font-size: 13px;
     line-height: 24px;
     overscroll-behavior: none;
+    overflow: hidden;
 }
 
 .uiMessageContainer {
@@ -48,7 +49,6 @@ body {
     left: 50%;
     right: 50%;
     top: 30px;
-    font-size: 60px;
     text-align: center;
 }
 .uiScoreHeading {
@@ -60,7 +60,7 @@ body {
     display: block;
     margin-bottom: 50px;
     text-align: center;
-    font-size:60px;
+    font-size: 60px;
     font-weight: bold;
     color: black;
     -webkit-text-fill-color: white; /* Will override color (regardless of order) */
