Working on touch

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@ body {
     line-height: 24px;
     overscroll-behavior: none;
     overflow: hidden;
+    touch-action: none;
+}
+canvas {
+    touch-action: none;
 }
 
 .uiMessageContainer {
